Remove slides on SVMs.

--- a/main.tex
+++ b/main.tex
@@ -148,24 +148,24 @@
 \end{frame}
 
 
-\begin{frame}{Context: Slides from the Winners}
-	\begin{figure}[]
-		\centering
-		\includegraphics[width=0.9\textwidth]{assets/imagenet_2010_training_algos_grayed.png}
-	\end{figure}
+%\begin{frame}{Context: Slides from the Winners}
+%    \begin{figure}[]
+%        \centering
+%        \includegraphics[width=0.9\textwidth]{assets/imagenet_2010_training_algos_grayed.png}
+%    \end{figure}
 
-	\source{https://www.image-net.org/static\_files/files/ILSVRC2010\_NEC-UIUC.pdf}
-\end{frame}
+%    \source{https://www.image-net.org/static\_files/files/ILSVRC2010\_NEC-UIUC.pdf}
+%\end{frame}
 
 
-\begin{frame}{Context: Slides from the Winners --- Revealed!}
-	\begin{figure}[]
-		\centering
-		\includegraphics[width=0.9\textwidth]{assets/imagenet_2010_training_algos.png}
-	\end{figure}
+%\begin{frame}{Context: Slides from the Winners --- Revealed!}
+%    \begin{figure}[]
+%        \centering
+%        \includegraphics[width=0.9\textwidth]{assets/imagenet_2010_training_algos.png}
+%    \end{figure}
 
-	\source{https://www.image-net.org/static\_files/files/ILSVRC2010\_NEC-UIUC.pdf}
-\end{frame}
+%    \source{https://www.image-net.org/static\_files/files/ILSVRC2010\_NEC-UIUC.pdf}
+%\end{frame}
 
 
 \begin{frame}{Context: DALL$\cdot$E 2}
