Remove unnecessary labels.

--- a/main.tex
+++ b/main.tex
@@ -447,7 +447,7 @@
 
 	Given \( \rbr{v^*, w^*} \), an optimal non-convex ReLU network is
 
-	\begin{equation*}\label{eq:convex-to-relu}
+	\begin{equation*}
 		\textbf{C to NC:} \quad
 		\begin{aligned}
 			W_{1i} & = v_i^*/ \sqrt{\norm{v_i^*}}, \quad w_{2i} = \sqrt{\norm{v_i^*}}
@@ -729,11 +729,11 @@
 
 	\pause
 
-	\begin{proposition}[Informal]\label{prop:sol-fn-cgl}
+	\begin{proposition}[Informal]
 		Fix \( \lambda > 0 \).
 		The optimal set for CGL problem is
 		given by
-		\begin{equation*}\label{eq:sol-fn-cgl}
+		\begin{equation*}
 			\begin{aligned}
 				\solfn(\lambda) =
 				\big\{  w  \in  \R^d : \, & X w = \hat y,                                     \\
@@ -758,7 +758,7 @@
 \begin{frame}{CGL: Mapping back to Non-Convex Networks}
 
 	Remember how to convert between solutions:
-	\begin{equation*}\label{eq:convex-to-relu}
+	\begin{equation*}
 		\textbf{C to NC:} \quad
 		\begin{aligned}
 			W_{1i} & = v_i^*/ \sqrt{\norm{v_i^*}}, \quad w_{2i} = \sqrt{\norm{v_i^*}}
@@ -774,7 +774,7 @@
 		Suppose \( m \geq m^* \).
 		Then the optimal set for the ReLU problem is
 		\vspace{-1ex}
-		\begin{equation*}\label{eq:relu-sol-fn}
+		\begin{equation*}
 			\begin{aligned}
 				\hspace{-0.5em} \calO_\lambda  = \,
 				\big\{
